[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/MenuReal.gd" type="Script" id=1]
[ext_resource path="res://Shaders/letter_up_down.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Global/Transição.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/fonts/pdark_logo.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/fonts/unispace bd.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Menu/Background_scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Others/Options2.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Menu/Options.gd" type="Script" id=9]
[ext_resource path="res://Resources/Musics/MyVeryOwnDeadShip.ogg" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Menu/Main.gd" type="Script" id=11]
[ext_resource path="res://Scenes/TestMap.tscn" type="PackedScene" id=12]
[ext_resource path="res://Themes/MenuButtons.tres" type="Theme" id=13]

[sub_resource type="Gradient" id=11]
interpolation_mode = 2
offsets = PoolRealArray( 0.773279, 1 )
colors = PoolColorArray( 0.188235, 0, 0.14902, 0.74902, 0.188235, 0, 0.14902, 0.184314 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float bloomRadius = 1.0;
uniform float bloomThreshold = 1.0;
uniform float bloomIntensity = 1.0;

vec3 GetBloomPixel(sampler2D tex, vec2 uv, vec2 texPixelSize) {
	vec2 uv2 = floor(uv / texPixelSize) * texPixelSize;
	uv2 += texPixelSize * .001;
	vec3 tl = max(texture(tex, uv2).rgb - bloomThreshold, 0.0);
	vec3 tr = max(texture(tex, uv2 + vec2(texPixelSize.x, 0.0)).rgb - bloomThreshold, 0.0);
	vec3 bl = max(texture(tex, uv2 + vec2(0.0, texPixelSize.y)).rgb - bloomThreshold, 0.0);
	vec3 br = max(texture(tex, uv2 + vec2(texPixelSize.x, texPixelSize.y)).rgb - bloomThreshold, 0.0);
	vec2 f = fract( uv / texPixelSize );

	vec3 tA = mix( tl, tr, f.x );
	vec3 tB = mix( bl, br, f.x );

	return mix( tA, tB, f.y );
}

vec3 GetBloom(sampler2D tex, vec2 uv, vec2 texPixelSize) {
	vec3 bloom = vec3(0.0);
	vec2 off = vec2(1) * texPixelSize * bloomRadius;
	bloom += GetBloomPixel(tex, uv + off * vec2(-1, -1), texPixelSize * bloomRadius) * 0.292893;
	bloom += GetBloomPixel(tex, uv + off * vec2(-1, 0), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(-1, 1), texPixelSize * bloomRadius) * 0.292893;
	bloom += GetBloomPixel(tex, uv + off * vec2(0, -1), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(0, 0), texPixelSize * bloomRadius) * 1.0;
	bloom += GetBloomPixel(tex, uv + off * vec2(0, 1), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(1, -1), texPixelSize * bloomRadius) * 0.292893;
	bloom += GetBloomPixel(tex, uv + off * vec2(1, 0), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(1, 1), texPixelSize * bloomRadius) * 0.292893;
	bloom /= 4.171573f;
	return bloom;
}

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec3 bloom = GetBloom(TEXTURE, UV, TEXTURE_PIXEL_SIZE);
	col.rgb += bloom * bloomIntensity;
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/bloomRadius = 0.1
shader_param/bloomThreshold = 0.5
shader_param/bloomIntensity = 0.5

[sub_resource type="DynamicFont" id=1]
size = 55
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=14]
resource_name = "letter_down"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:material:shader_param/transition")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 0.025383, 14.42, 1 ),
"update": 0,
"values": [ 0.1, -0.1, 0.0, 0.0, -0.1 ]
}

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 50
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Main/Button2:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/Button3:flat")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Main/Button:flat")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "call_menu"
tracks/0/type = "value"
tracks/0/path = NodePath("Main/RichTextLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -500, 135 ), Vector2( 40, 135 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Main/Button:material:shader_param/transition")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Main/Button2:flat")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Main/Button3:flat")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Main/Button:flat")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float bloomRadius = 1.0;
uniform float bloomThreshold = 1.0;
uniform float bloomIntensity = 1.0;

vec3 GetBloomPixel(sampler2D tex, vec2 uv, vec2 texPixelSize) {
	vec2 uv2 = floor(uv / texPixelSize) * texPixelSize;
	uv2 += texPixelSize * .001;
	vec3 tl = max(texture(tex, uv2).rgb - bloomThreshold, 0.0);
	vec3 tr = max(texture(tex, uv2 + vec2(texPixelSize.x, 0.0)).rgb - bloomThreshold, 0.0);
	vec3 bl = max(texture(tex, uv2 + vec2(0.0, texPixelSize.y)).rgb - bloomThreshold, 0.0);
	vec3 br = max(texture(tex, uv2 + vec2(texPixelSize.x, texPixelSize.y)).rgb - bloomThreshold, 0.0);
	vec2 f = fract( uv / texPixelSize );

	vec3 tA = mix( tl, tr, f.x );
	vec3 tB = mix( bl, br, f.x );

	return mix( tA, tB, f.y );
}

vec3 GetBloom(sampler2D tex, vec2 uv, vec2 texPixelSize) {
	vec3 bloom = vec3(0.0);
	vec2 off = vec2(1) * texPixelSize * bloomRadius;
	bloom += GetBloomPixel(tex, uv + off * vec2(-1, -1), texPixelSize * bloomRadius) * 0.292893;
	bloom += GetBloomPixel(tex, uv + off * vec2(-1, 0), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(-1, 1), texPixelSize * bloomRadius) * 0.292893;
	bloom += GetBloomPixel(tex, uv + off * vec2(0, -1), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(0, 0), texPixelSize * bloomRadius) * 1.0;
	bloom += GetBloomPixel(tex, uv + off * vec2(0, 1), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(1, -1), texPixelSize * bloomRadius) * 0.292893;
	bloom += GetBloomPixel(tex, uv + off * vec2(1, 0), texPixelSize * bloomRadius) * 0.5;
	bloom += GetBloomPixel(tex, uv + off * vec2(1, 1), texPixelSize * bloomRadius) * 0.292893;
	bloom /= 4.171573f;
	return bloom;
}

void fragment() {
	vec4 col = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec3 bloom = GetBloom(SCREEN_TEXTURE, SCREEN_UV, TEXTURE_PIXEL_SIZE);
	col.rgb += bloom * bloomIntensity;
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/bloomRadius = 0.2
shader_param/bloomThreshold = 0.75
shader_param/bloomIntensity = 10.0

[node name="Ui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="MenuPanel" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = 367.0
margin_right = 722.0
margin_bottom = 830.0
rect_rotation = -90.0
texture = SubResource( 12 )
expand = true

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
world_scene = ExtResource( 12 )

[node name="Transição" parent="Main" instance=ExtResource( 3 )]

[node name="RichTextLabel" type="RichTextLabel" parent="Main"]
modulate = Color( 0.678431, 0.65098, 0.65098, 1 )
self_modulate = Color( 0.945098, 1, 0, 1 )
material = SubResource( 6 )
margin_left = 40.0
margin_top = 135.0
margin_right = 455.0
margin_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_colors/selection_color = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color_selected = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0.945098, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[tornado]DATADROID"
text = "DATADROID"

[node name="Button" type="Button" parent="Main"]
material = ExtResource( 2 )
margin_left = 84.0
margin_top = 233.0
margin_right = 321.0
margin_bottom = 298.0
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_focus = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_hover = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 1, 0.00392157, 0.611765, 1 )
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="AnimationsButton" type="AnimationPlayer" parent="Main/Button"]
root_node = NodePath("../..")
autoplay = "letter_down"
anims/letter_down = SubResource( 14 )

[node name="Button2" type="Button" parent="Main"]
material = ExtResource( 2 )
margin_left = 87.0
margin_top = 316.0
margin_right = 320.0
margin_bottom = 381.0
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_focus = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_hover = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 1, 0.00392157, 0.611765, 1 )
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Button3" type="Button" parent="Main"]
material = ExtResource( 2 )
margin_left = 86.0
margin_top = 396.0
margin_right = 320.0
margin_bottom = 461.0
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_focus = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_hover = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 1, 0.00392157, 0.611765, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="Options"]
script = ExtResource( 8 )
main_menu = null

[node name="HSlider" type="HSlider" parent="Options"]
margin_left = 162.0
margin_top = 250.0
margin_right = 385.0
margin_bottom = 278.0
min_value = -26.0
max_value = 0.0

[node name="HSlider2" type="HSlider" parent="Options"]
margin_left = 141.0
margin_top = 280.0
margin_right = 384.0
margin_bottom = 392.0
min_value = -26.0
max_value = 0.0

[node name="HSlider3" type="HSlider" parent="Options"]
margin_left = 95.0
margin_top = 354.0
margin_right = 385.0
margin_bottom = 485.0
min_value = -26.0
max_value = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Options"]
stream = ExtResource( 10 )
autoplay = true
bus = "Music"

[node name="RichTextLabel" type="RichTextLabel" parent="Options"]
margin_left = 20.0
margin_top = 237.0
margin_right = 180.0
margin_bottom = 317.0
custom_colors/default_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/selection_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_selected = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_shadow = Color( 1, 0.00392157, 0.611765, 1 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[shake]MASTER:"
text = "MASTER:"

[node name="RichTextLabel2" type="RichTextLabel" parent="Options"]
margin_left = 17.0
margin_top = 309.0
margin_right = 149.0
margin_bottom = 389.0
custom_colors/default_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/selection_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_selected = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_shadow = Color( 1, 0.00392157, 0.611765, 1 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[shake]MUSIC:"
text = "MUSIC:"

[node name="RichTextLabel3" type="RichTextLabel" parent="Options"]
margin_left = 15.0
margin_top = 391.0
margin_right = 111.0
margin_bottom = 471.0
custom_colors/default_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/selection_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_selected = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_shadow = Color( 1, 0.00392157, 0.611765, 1 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[shake]SFX:"
text = "SFX:"

[node name="Title" type="RichTextLabel" parent="Options"]
margin_left = 44.0
margin_top = 141.0
margin_right = 423.0
margin_bottom = 266.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_colors/selection_color = Color( 0.0862745, 0.294118, 0.462745, 1 )
custom_colors/font_color_selected = Color( 0.0862745, 0.294118, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.294118, 0.462745, 1 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[tornado]OPTIONS"
text = "OPTIONS"

[node name="options_button_back" type="Button" parent="Options"]
margin_left = 126.0
margin_top = 466.0
margin_right = 274.0
margin_bottom = 539.0
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_focus = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color = Color( 1, 0.00392157, 0.611765, 1 )
custom_colors/font_color_hover = Color( 1, 0.443137, 0.784314, 1 )
custom_colors/font_color_pressed = Color( 1, 0.00392157, 0.258824, 1 )
custom_fonts/font = SubResource( 17 )
text = "BACK"

[node name="CheckBox" type="CheckBox" parent="Options"]
margin_left = 383.0
margin_top = 232.0
margin_right = 407.0
margin_bottom = 256.0
rect_scale = Vector2( 2.71494, 2.42775 )

[node name="CheckBox2" type="CheckBox" parent="Options"]
margin_left = 382.0
margin_top = 303.0
margin_right = 406.0
margin_bottom = 327.0
rect_scale = Vector2( 2.71494, 2.42775 )

[node name="CheckBox3" type="CheckBox" parent="Options"]
margin_left = 384.0
margin_top = 390.0
margin_right = 408.0
margin_bottom = 414.0
rect_scale = Vector2( 2.71494, 2.42775 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 18 )
anims/call_menu = SubResource( 15 )

[node name="Bloom_shader" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 514.5, 304 )
scale = Vector2( 18.4844, 10.8437 )
texture = ExtResource( 7 )

[connection signal="pressed" from="Main/Button" to="Main" method="_on_Button_pressed"]
[connection signal="pressed" from="Main/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Main/Button3" to="Main" method="_on_Button3_pressed"]
[connection signal="value_changed" from="Options/HSlider" to="Options/CanvasLayer" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Options/HSlider2" to="Options/CanvasLayer" method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="Options/HSlider3" to="Options/CanvasLayer" method="_on_HSlider3_value_changed"]
[connection signal="pressed" from="Options/options_button_back" to="." method="_on_options_button_back_pressed"]
[connection signal="toggled" from="Options/CheckBox" to="Options" method="_on_CheckBox_toggled"]
[connection signal="toggled" from="Options/CheckBox2" to="Options" method="_on_CheckBox2_toggled"]
[connection signal="toggled" from="Options/CheckBox3" to="Options" method="_on_CheckBox3_toggled"]
